--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "get-urls": "^10.0.0",
     "googleapis": "^59.0.0"
   },
   "devDependencies": {
