--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "@types/bluebird": "^3.5.32",
     "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "get-urls": "^10.0.0",
     "googleapis": "^59.0.0"
   },
