add yarn graph:dependencies:lib command

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && yarn",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-    "graph:dependencies": "depcruise --exclude '^node_modules' --output-type dot src | dot -T svg > dependencygraph.svg && open dependencygraph.svg"
+    "graph:dependencies": "depcruise --exclude '^node_modules' --output-type dot src | dot -T svg > dependencygraph.svg && open dependencygraph.svg",
+    "graph:dependencies:lib": "depcruise --exclude '^node_modules' --output-type dot src/lib | dot -T svg > dependencygraph.svg && open dependencygraph.svg"
   },
   "engines": {
     "node": ">=10"
