--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "@types/bluebird": "^3.5.32",
+    "@types/verror": "^1.10.4",
     "axios": "^0.19.0",
     "bluebird": "^3.7.2",
     "get-urls": "^10.0.0",
-    "googleapis": "^59.0.0"
+    "googleapis": "^59.0.0",
+    "verror": "^1.10.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
