--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/verror": "^1.10.4",
     "axios": "^0.19.0",
     "bluebird": "^3.7.2",
+    "gaxios": "^3.2.0",
     "get-urls": "^10.0.0",
     "googleapis": "^59.0.0",
     "verror": "^1.10.0"
