--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gaxios": "^3.2.0",
     "get-urls": "^10.0.0",
     "googleapis": "^59.0.0",
+    "open": "^7.2.1",
     "verror": "^1.10.0"
   },
   "devDependencies": {
