--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
-    "test": "yarn test:unit",
-    "test:lint": "eslint src --ext .ts",
-    "test:unit": "nyc --silent ava",
+    "test": "nyc --silent ava",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "nyc --silent ava --watch",
     "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
