--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-poc",
+  "name": "inbox-scanner",
   "version": "1.0.0",
   "description": "TS POC",
   "main": "build/main/index.js",
@@ -9,7 +9,7 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
-    "start": "node .",
+    "start": "node . | yarn frontail - --ui-hide-topbar",
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
@@ -36,6 +36,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
+    "frontail": "^4.9.1",
     "gaxios": "^3.2.0",
     "get-urls": "^10.0.0",
     "googleapis": "^59.0.0",
