--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "@supercharge/promise-pool": "^1.5.0",
     "@types/bluebird": "^3.5.32",
     "@types/express": "^4.17.8",
     "@types/verror": "^1.10.4",
